fix(ci): Enhance test:ci script with JUnit+JSON reporters and skipped report

--- a/package.json
+++ b/package.json
@@ -92,8 +92,9 @@
     "test:client": "vitest -c vitest.config.ts --project client run",
     "test:server": "vitest -c vitest.config.ts --project server run",
     "test:watch": "vitest",
-    "test:ci": "mkdir -p reports && CI=true vitest run --project=server --maxWorkers=2 --bail 1",
+    "test:ci": "mkdir -p reports && CI=true vitest run --project=server --maxWorkers=2 --bail 1 --reporter=default --reporter=junit --reporter=json --outputFile.junit=reports/junit-vitest.xml --outputFile.json=reports/vitest.json && node scripts/generate-skipped-report.js",
     "test:ci:shard": "node scripts/vitest-shard.mjs",
+    "test:report:skipped": "node scripts/generate-skipped-report.js",
     "test:peek": "pnpm test 2>&1 | head -n 200",
     "test:fail": "pnpm test 2>&1 | grep -A 8 -E 'FAIL|✖|Error|AssertionError|Test Files|failed'",
     "test:summary": "pnpm test 2>&1 | tail -n 50",
