fix(superadmin): Improve error handling for missing SUPERADMIN_PASSWORD
Root Cause:
- /superadmin/login (emergency portal) requires SUPERADMIN_PASSWORD env var
- When not configured, login fails with generic 'Password is incorrect' error
- This is confusing because credentials may be correct but server is misconfigured

Changes:
- lib/superadmin/auth.ts: Return structured result from verifySuperadminPassword()
  with 'not_configured' vs 'invalid' distinction
- app/api/superadmin/login/route.ts: Return HTTP 500 with clear message when
  SUPERADMIN_PASSWORD is not set
- .env.example: Document all SUPERADMIN_* env vars for emergency portal

Also fixed:
- tests/api/_helpers/loadRoute.ts: Fix ESLint 'module' variable + TypeScript type
- tools/fix-test-imports.js: Remove unused 'path' import

Required Vercel Configuration:
  SUPERADMIN_USERNAME=superadmin (optional, defaults to 'superadmin')
  SUPERADMIN_PASSWORD=your-password-here (REQUIRED)
  SUPERADMIN_ORG_ID or PUBLIC_ORG_ID or DEFAULT_ORG_ID (REQUIRED)

--- a/.env.example
+++ b/.env.example
@@ -98,6 +98,34 @@ ALLOW_DEMO_LOGIN=false
 # Super Admin fallback phone for OTP (when user has no phone configured)
 # NEXTAUTH_SUPERADMIN_FALLBACK_PHONE=+966500000000
 
+# =============================================================================
+# SUPERADMIN EMERGENCY PORTAL (/superadmin/login)
+# =============================================================================
+# This is a SEPARATE authentication system from NextAuth, used for emergency
+# access when NextAuth is unavailable. Configure in Vercel/production.
+#
+# Username (defaults to "superadmin" if not set)
+# SUPERADMIN_USERNAME=superadmin
+#
+# Password (REQUIRED - one of these must be set for emergency login to work)
+# Option 1: Plaintext (for development only)
+# SUPERADMIN_PASSWORD=your-strong-password-here
+# Option 2: Bcrypt hash (recommended for production)
+# Generate hash: node -e "console.log(require('bcryptjs').hashSync('password', 10))"
+# SUPERADMIN_PASSWORD_HASH=$2a$10$...
+#
+# Org ID for session tokens (REQUIRED - uses first available)
+# SUPERADMIN_ORG_ID= (or PUBLIC_ORG_ID or DEFAULT_ORG_ID)
+#
+# Optional: Second factor key for extra security
+# SUPERADMIN_SECRET_KEY=
+#
+# Optional: IP allowlist (comma-separated, empty = allow all)
+# SUPERADMIN_IP_ALLOWLIST=
+#
+# Optional: JWT secret (falls back to NEXTAUTH_SECRET if not set)
+# SUPERADMIN_JWT_SECRET=
+
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 
