feat(ci): Production-grade QA hardening
Phase 1: Guard v3 with ticketed allow format
- guard-placeholders:allow(FIXZIT-XXX) required for exemptions
- Legacy allows warn during grace period

Phase 2: Exit-code safe test:ci
- test-ci-runner.js captures exit code, generates reports, exits correctly
- CI fails on test failures but artifacts always produced

Phase 3: Skipped/todo governance
- SKIPPED_TESTS_BASELINE.json with skip=925, threshold warn=10, fail=50
- generate-skipped-report.js checks against baseline

Phase 4: Admin guard enforcement
- guard-admin-checks.js detects inline SUPER_ADMIN role checks
- Baseline=35 inline checks, warns on new additions
- Added to lint:ci pipeline

Documentation:
- SYSTEM_WIDE_TEST_AND_GUARD_AUDIT.md with full scan results

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "lint:prod:baseline": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --format json -o _artifacts/eslint-baseline.json",
     "lint:scripts": "eslint scripts tools --ext .ts,.tsx,.js,.jsx",
     "lint:collections": "node scripts/lint-collections.js",
-    "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run rbac:client:check && npm run lint:rbac && npm run typecheck && npm run guard:placeholders && pnpm vitest run tests/unit/security/banned-literals.test.ts",
+    "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run rbac:client:check && npm run lint:rbac && npm run typecheck && npm run guard:placeholders && npm run guard:admin-checks && pnpm vitest run tests/unit/security/banned-literals.test.ts",
     "guard:placeholders": "node scripts/guard-placeholders.js",
+    "guard:admin-checks": "node scripts/guard-admin-checks.js",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
     "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
@@ -92,7 +93,8 @@
     "test:client": "vitest -c vitest.config.ts --project client run",
     "test:server": "vitest -c vitest.config.ts --project server run",
     "test:watch": "vitest",
-    "test:ci": "mkdir -p reports && CI=true vitest run --project=server --maxWorkers=2 --bail 1 --reporter=default --reporter=junit --reporter=json --outputFile.junit=reports/junit-vitest.xml --outputFile.json=reports/vitest.json && node scripts/generate-skipped-report.js",
+    "test:ci": "node scripts/test-ci-runner.js",
+    "test:ci:raw": "mkdir -p reports && CI=true vitest run --project=server --maxWorkers=2 --bail 1 --reporter=default --reporter=junit --reporter=json --outputFile.junit=reports/junit-vitest.xml --outputFile.json=reports/vitest.json && node scripts/generate-skipped-report.js",
     "test:ci:shard": "node scripts/vitest-shard.mjs",
     "test:report:skipped": "node scripts/generate-skipped-report.js",
     "test:peek": "pnpm test 2>&1 | head -n 200",
