docs: Phase 5 verification report + qa:gate script
- Added PHASE5_VERIFICATION_REPORT.md with full verification evidence
- Added qa:guards and qa:gate scripts to package.json
- Verified: 5015 tests passed, 0 failed
- Verified: TypeCheck/Lint/Build all pass
- Verified: Guard scripts pass (0 violations)
- Fixed: Restored 182 accidentally deleted test files

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run rbac:client:check && npm run lint:rbac && npm run typecheck && npm run guard:placeholders && npm run guard:admin-checks && pnpm vitest run tests/unit/security/banned-literals.test.ts",
     "guard:placeholders": "node scripts/guard-placeholders.js",
     "guard:admin-checks": "node scripts/guard-admin-checks.js",
+    "qa:guards": "node scripts/guard-placeholders.js && node scripts/guard-admin-checks.js",
+    "qa:gate": "pnpm qa:guards && pnpm lint && pnpm typecheck && pnpm build",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
     "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
