docs: Add Fixzit System Blueprint Master Bible v2025.12.19
- Added comprehensive Blueprint document (181KB) as SoT
- Updated 000-index.md to reference new Blueprint
- Fixed test configurations (vitest.config.ts, tests)
- Added repo-sanity-check.sh script
- Updated build-sourcemaps workflow
- Fixed aqar favorites route

--- a/package.json
+++ b/package.json
@@ -32,8 +32,14 @@
     "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run rbac:client:check && npm run lint:rbac && npm run typecheck && npm run guard:placeholders && npm run guard:admin-checks && pnpm vitest run tests/unit/security/banned-literals.test.ts",
     "guard:placeholders": "node scripts/guard-placeholders.js",
     "guard:admin-checks": "node scripts/guard-admin-checks.js",
+    "qa:preflight": "bash scripts/repo-sanity-check.sh",
     "qa:guards": "node scripts/guard-placeholders.js && node scripts/guard-admin-checks.js",
-    "qa:gate": "pnpm qa:guards && pnpm lint && pnpm typecheck && pnpm build",
+    "qa:tests": "pnpm vitest run --reporter=verbose",
+    "qa:tests:api": "pnpm vitest run -c vitest.config.api.ts --reporter=verbose",
+    "qa:tests:models": "pnpm vitest run -c vitest.config.models.ts --reporter=verbose",
+    "qa:build": "pnpm lint && pnpm typecheck && pnpm build",
+    "qa:gate": "pnpm qa:preflight && pnpm qa:guards && pnpm qa:tests && pnpm qa:build",
+    "qa:gate:full": "pnpm qa:preflight && pnpm qa:guards && pnpm qa:tests && pnpm qa:tests:api && pnpm qa:build",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
     "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
