--- a/.github/workflows/build-sourcemaps.yml
+++ b/.github/workflows/build-sourcemaps.yml
@@ -61,6 +61,7 @@ jobs:
         run: pnpm tsx -e "import { createIndexes } from './lib/db/collections'; import { getDatabase } from './lib/mongodb-unified'; (async () => { await createIndexes(); try { const db = await getDatabase(); (db as any)?.client?.close?.(); } catch (_) {} })();"
 
       - name: 🏗️ Build with source maps
+        id: build
         run: |
           set -e
           echo "Building Next.js app with source maps…"
@@ -94,10 +95,19 @@ jobs:
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_RELEASE: ${{ github.sha }}
+          BUILD_OUTCOME: ${{ steps.build.outcome || 'unknown' }}
         run: |
           echo "## Build Summary" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Production build completed" >> $GITHUB_STEP_SUMMARY
-          MAP_COUNT=$(find .next -name "*.map" -type f | wc -l || echo "0")
+          if [ "$BUILD_OUTCOME" = "success" ]; then
+            echo "✅ Production build completed" >> $GITHUB_STEP_SUMMARY
+          elif [ "$BUILD_OUTCOME" = "failure" ]; then
+            echo "❌ Production build FAILED" >> $GITHUB_STEP_SUMMARY
+          elif [ "$BUILD_OUTCOME" = "skipped" ]; then
+            echo "⏭️ Production build skipped" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ Production build outcome: $BUILD_OUTCOME" >> $GITHUB_STEP_SUMMARY
+          fi
+          MAP_COUNT=$(find .next -name "*.map" -type f 2>/dev/null | wc -l || echo "0")
           echo "🗺️ Source maps: $MAP_COUNT files" >> $GITHUB_STEP_SUMMARY
           TOTAL_SIZE=$(find .next -name "*.map" -type f -exec du -ch {} + 2>/dev/null | awk '/total/{print $1}')
           echo "💾 Total .map size: ${TOTAL_SIZE:-0}" >> $GITHUB_STEP_SUMMARY
