ci(qa): add production MongoDB guard and .only() skip governance
- Add assert-nonprod-mongo.ts to prevent CI connecting to production DB
- Add .only() governance check to catch accidental test skips
- Add audit triage documents for auth.503 and tenant-update issues

Safety-first CI improvements for Phase 5 verification.

--- a/.github/workflows/build-sourcemaps.yml
+++ b/.github/workflows/build-sourcemaps.yml
@@ -54,6 +54,13 @@ jobs:
       - name: 📥 Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: 🔒 Assert non-production MongoDB
+        if: env.HAS_MONGODB_URI == 'true'
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CI: "true"
+        run: pnpm tsx scripts/assert-nonprod-mongo.ts
+
       - name: Ensure Mongo Indexes (idempotent)
         if: env.HAS_MONGODB_URI == 'true'
         env:
