ci: improve quality gates summary accuracy + add nightly shuffle tests
- fixzit-quality-gates.yml: Summary now reflects actual job status (success vs warnings/failures)
- nightly-shuffle.yml: New workflow runs multi-seed shuffle tests (1000-1004) at 3:30 AM UTC
  - Detects test isolation issues before they cause flaky CI
  - Supports manual dispatch with custom seeds
  - Uploads detailed logs as artifacts

Addresses IL-3 (unconditional success message) and adds proactive shuffle stability monitoring.

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -548,10 +548,17 @@ jobs:
 
       # ---------- Summary ----------
       - name: Summary
+        if: always()
         run: |
           echo "## 🎯 Fixzit Quality Gates Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ **Quality gates completed successfully!**" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ job.status }}" = "success" ]; then
+            echo "✅ **Quality gates completed successfully!**" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ **Quality gates completed with warnings or failures.**" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Check the job logs above for details on which steps failed." >> $GITHUB_STEP_SUMMARY
+          fi
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📦 Generated Artifacts:" >> $GITHUB_STEP_SUMMARY
           echo "- **OpenAPI Specification** (if found or generated)" >> $GITHUB_STEP_SUMMARY
