feat(security): add tenant safety wrapper + auth-503 regression guards
Phase 3.5 Hardening:

Mongo Guard Expansion:
- Added assert-nonprod-mongo.ts check to webpack.yml
- Added assert-nonprod-mongo.ts check to fixzit-quality-gates.yml

Tenant Safety (prevents cross-tenant writes):
- Created lib/db/safe-tenant-update.ts wrapper for raw collection operations
- Enforces orgId/property_owner_id in all updateOne/updateMany/bulkWrite
- Throws in dev/test, logs in production (fail-safe)
- Added tests/unit/db/safe-tenant-update.test.ts (9 tests)

Auth → 503 Regression Guard:
- Added tests/unit/lib/auth-503-regression.test.ts (11 tests)
- Ensures UnauthorizedError is never masked as 503
- Documents isUnauthorizedError guard contract

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors
- All new tests pass

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -157,6 +157,19 @@ jobs:
             *) npm run typecheck || npm run tsc --noEmit ;;
           esac
 
+      - name: 🔒 Assert non-production MongoDB
+        if: ${{ secrets.MONGODB_URI != '' }}
+        shell: bash
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CI: "true"
+        run: |
+          case "${{ steps.pm.outputs.manager }}" in
+            pnpm) pnpm tsx scripts/assert-nonprod-mongo.ts ;;
+            yarn) yarn tsx scripts/assert-nonprod-mongo.ts ;;
+            *) npx tsx scripts/assert-nonprod-mongo.ts ;;
+          esac
+
       - name: Ensure Mongo Indexes (idempotent)
         shell: bash
         env:
