--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -75,6 +75,13 @@ jobs:
         run: pnpm run lint
         continue-on-error: false
 
+      - name: 🔒 Assert non-production MongoDB
+        if: ${{ secrets.MONGODB_URI != '' }}
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CI: "true"
+        run: pnpm tsx scripts/assert-nonprod-mongo.ts
+
       - name: Ensure Mongo Indexes (idempotent)
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit-test' }}
