fix(ci): move secrets check to shell to silence VS Code linter
Changed pattern from:
  if: ${{ secrets.MONGODB_URI != '' }}
To shell-based check:
  if [ -z "$MONGODB_URI" ]; then exit 0; fi

Files:
- .github/workflows/fixzit-quality-gates.yml
- .github/workflows/webpack.yml

This silences the 'Unrecognized named-value: secrets' linter warning
while maintaining the same runtime behavior.

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -158,12 +158,15 @@ jobs:
           esac
 
       - name: 🔒 Assert non-production MongoDB
-        if: ${{ secrets.MONGODB_URI != '' }}
         shell: bash
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           CI: "true"
         run: |
+          if [ -z "$MONGODB_URI" ]; then
+            echo "⏭️ Skipping - MONGODB_URI not configured"
+            exit 0
+          fi
           case "${{ steps.pm.outputs.manager }}" in
             pnpm) pnpm tsx scripts/assert-nonprod-mongo.ts ;;
             yarn) yarn tsx scripts/assert-nonprod-mongo.ts ;;
