fix(ci): Add MONGODB_URI secret guard to Mongo index steps
Prevents CI failures on forks/PRs where MONGODB_URI secret is not available.

Changes:
- fixzit-quality-gates.yml: Skip index creation if MONGODB_URI unset
- webpack.yml: Skip index creation if MONGODB_URI unset

This aligns with the guard pattern already used for assert-nonprod-mongo step.

Refs: Review Report - CONFIRMED Severity 7

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -176,8 +176,13 @@ jobs:
       - name: Ensure Mongo Indexes (idempotent)
         shell: bash
         env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit_test' }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CI: "true"
         run: |
+          if [ -z "$MONGODB_URI" ]; then
+            echo "⏭️ Skipping - MONGODB_URI not configured"
+            exit 0
+          fi
           case "${{ steps.pm.outputs.manager }}" in
             pnpm) pnpm tsx -e "import { createIndexes } from './lib/db/collections'; import { getDatabase } from './lib/mongodb-unified'; (async () => { await createIndexes(); try { const db = await getDatabase(); (db as any)?.client?.close?.(); } catch (_) {} })();" ;;
             yarn) yarn tsx -e "import { createIndexes } from './lib/db/collections'; import { getDatabase } from './lib/mongodb-unified'; (async () => { await createIndexes(); try { const db = await getDatabase(); (db as any)?.client?.close?.(); } catch (_) {} })();" ;;
