fix(build): add pages/** to tsconfig.build.json + rate limit test for stats route
tsconfig.build.json:
- Added pages/**/*.ts and pages/**/*.tsx to include list
- Ensures _document.tsx and _app.tsx are typechecked during build
- Required for Next.js 15 compatibility

stats.route.test.ts:
- Added rate limit mock for enforceRateLimit
- Added test: 'returns 429 when rate limit is exceeded'
- All 4 tests pass (was 3, now 4)

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors
- stats.route.test.ts: 4/4 passed

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -73,6 +73,13 @@ jobs:
       - name: Lint check
         run: pnpm run lint
 
+      - name: 🔒 Assert non-production MongoDB
+        if: ${{ secrets.MONGODB_URI != '' }}
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CI: "true"
+        run: pnpm tsx scripts/assert-nonprod-mongo.ts
+
       - name: Ensure Mongo Indexes (idempotent)
         # IMPORTANT: secrets are empty on fork PRs; skip instead of trying localhost.
         env:
