--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,6 +7,8 @@
     "next-env.d.ts",
     "app/**/*.ts",
     "app/**/*.tsx",
+    "pages/**/*.ts",
+    "pages/**/*.tsx",
     "components/**/*.ts",
     "components/**/*.tsx",
     "lib/**/*.ts",
