feat(aqar): add SearchFiltersNew with standard filter components
P3-AQAR-FILTERS RESOLVED:
- Created SearchFiltersNew.tsx using standard components:
  ✅ FacetMultiSelect (property types, cities, amenities, bedrooms, bathrooms)
  ✅ NumericRangeFilter (price range, area range)
  ✅ useTableQueryState (URL sync + localStorage)
- Created /aqar/search page using the new component
- Added 18 unit tests for SearchFiltersNew
- Updated integration tests (25 tests total)
- All 52 tests pass

Files added:
- components/aqar/SearchFiltersNew.tsx (450 lines)
- app/(app)/aqar/search/page.tsx (265 lines)
- tests/unit/components/aqar/SearchFiltersNew.test.ts

Quality gates:
- TypeScript: 0 errors
- ESLint: 0 warnings
- Tests: 52/52 pass

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -426,6 +426,11 @@
 			"label": "Find Large Files v3",
 			"type": "shell",
 			"command": "node scripts/find-large-files.js"
+		},
+		{
+			"label": "Full Validation",
+			"type": "shell",
+			"command": "CI=true pnpm vitest run --project=server --reporter=basic 2>&1 | tail -30"
 		}
 	]
 }
