fix(i18n): add superadmin nav translations + fix JSON escaping
NAV-MISSING-001 RESOLVED:
- Added nav section to superadmin translations (en.json, ar.json)
- Fixed invalid JSON escaping in importPlaceholder (\" → ")
- Updated PENDING_MASTER.md with discovery findings
- All 22 superadmin nav items now have translations

Quality gates:
- TypeScript: 0 errors
- ESLint: 0 warnings
- JSON validation: ✅ en.json, ✅ ar.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -431,6 +431,21 @@
 			"label": "Full Validation",
 			"type": "shell",
 			"command": "CI=true pnpm vitest run --project=server --reporter=basic 2>&1 | tail -30"
+		},
+		{
+			"label": "Packages Test",
+			"type": "shell",
+			"command": "CI=true pnpm vitest run tests/api/aqar/packages.route.test.ts --project=server --reporter=verbose 2>&1 | tail -30"
+		},
+		{
+			"label": "Packages Error",
+			"type": "shell",
+			"command": "CI=true pnpm vitest run tests/api/aqar/packages.route.test.ts --project=server 2>&1 | grep -A 20 'FAIL\\|Error\\|failed'"
+		},
+		{
+			"label": "Packages Full",
+			"type": "shell",
+			"command": "CI=true pnpm vitest run tests/api/aqar/packages.route.test.ts --project=server 2>&1"
 		}
 	]
 }
