fix(deps): add missing @tanstack/react-table dependency
EnhancedIssueTable.tsx requires @tanstack/react-table for table functionality.
This was causing Vercel build failures.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "audit:workspace": "bash scripts/audit-workspace.sh",
     "cleanup": "bash scripts/cleanup-space.sh",
     "cleanup:cache": "bash scripts/cleanup-dev-cache.sh",
+    "cleanup:worktrees": "bash scripts/cleanup-worktrees.sh",
+    "cleanup:worktrees:auto": "bash scripts/cleanup-worktrees.sh --auto",
     "agent:verify": "npm run typecheck && npm run lint && npm run build",
     "qa:verify": "node scripts/qa/halt-fix-verify.mjs",
     "merge:gate": "bash scripts/ci/local-merge-gate.sh",
@@ -205,6 +207,7 @@
     "@sentry/nextjs": "^10.32.1",
     "@smithy/smithy-client": "^4.10.2",
     "@tanstack/react-query": "^5.90.10",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/functions": "^3.3.3",
     "@vercel/speed-insights": "^1.3.1",
     "ai": "^5.0.116",
