--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -256,6 +257,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
+    "react-joyride": "^2.9.3",
     "recharts": "^3.6.0",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
