perf: Add .lean() to read queries, migrate console.log to logger, fix any types
Phase 1 & 2 Improvements:
- Add .lean() to vendors, assistant/query, aqar/leads queries (P0)
- Migrate app/api/cron/route.ts from console.* to structured logger (P1)
- Fix explicit 'any' types in files/resumes/[file] and superadmin/search (P2)

Performance: Verified N+1 patterns already use Promise.all (no action needed)
Quality: Most console.log statements are in JSDoc examples or have eslint-disable

Signed-off-by: Eng. Sultan Al Hassni

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,20 @@
 			"problemMatcher": []
 		},
 		{
+			"label": "Cleanup: Git Worktrees (Check)",
+			"type": "shell",
+			"command": "bash scripts/cleanup-worktrees.sh",
+			"problemMatcher": [],
+			"detail": "Show worktree status - prevent OOM/Exit Code 5 crashes"
+		},
+		{
+			"label": "Cleanup: Git Worktrees (Auto Remove Clean)",
+			"type": "shell",
+			"command": "bash scripts/cleanup-worktrees.sh --auto",
+			"problemMatcher": [],
+			"detail": "Auto-remove worktrees with no uncommitted changes"
+		},
+		{
 			"label": "AI Memory: Chunk Repository",
 			"type": "shell",
 			"command": "node tools/smart-chunker.js",
