docs(agents): Add NO SHORTCUTS policy + VS Code agent enforcement settings
AGENTS.md v5.4 updates:
- Added 'Do NOT take shortcuts or workarounds' to Absolute Global Rules
- Added 'Do NOT ignore issues - MUST report to MongoDB SSOT'
- Added FORBIDDEN ACTIONS box with 10 specific violations (AUTO-FAIL):
  - Commenting out tests
  - Using @ts-ignore without justification
  - Swallowing errors silently
  - Using 'as any' to bypass types
  - Hardcoding values
  - Deleting code instead of fixing root cause
  - Skipping SSOT update
  - 'Works on my machine' without evidence
  - Deferring without logging
  - Claiming 'out of scope' without tracked issue
- Added REQUIRED INSTEAD section with proper behavior

.vscode/settings.json updates:
- Added agent instruction enforcement section header
- Added github.copilot.chat.agent.followRules: true
- Added github.copilot.chat.agent.thinkingProcess: 'extended'
- Added explicit instructionFiles paths
- Added github.copilot.chat.agent.rules array with 7 rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,31 @@
 {
+  // ══════════════════════════════════════════════════════════════════════════════
+  // AGENT INSTRUCTIONS ENFORCEMENT (NON-NEGOTIABLE)
+  // All AI agents MUST follow AGENTS.md and .github/copilot-instructions.md
+  // ══════════════════════════════════════════════════════════════════════════════
   "github.copilot.chat.codeGeneration.useInstructionFiles": true,
   "chat.useAgentsMdFile": true,
+  "github.copilot.chat.agent.followRules": true,
+  "github.copilot.chat.agent.thinkingProcess": "extended",
+  "github.copilot.chat.localeOverride": "en",
+  
+  // Agent instruction files (explicit paths)
+  "github.copilot.chat.codeGeneration.instructionFiles": [
+    "AGENTS.md",
+    ".github/copilot-instructions.md",
+    ".github/instructions/*.instructions.md"
+  ],
+
+  // Agent behavior enforcement
+  "github.copilot.chat.agent.rules": [
+    "Always read and follow AGENTS.md before any task",
+    "Never take shortcuts or workarounds - fix root cause",
+    "Report ALL findings to MongoDB SSOT",
+    "Update docs/PENDING_MASTER.md after every session",
+    "Run SSOT Sync Protocol before closing any task",
+    "Notify Eng. Sultan with Final Output box",
+    "Never claim fixed without evidence"
+  ],
 
   "eslint.enable": true,
   "eslint.workingDirectories": [{ "mode": "location" }],
