docs(agents): Add env var verification protocol + error code standards
AGENTS.md updates:
- Added 'Do NOT blame missing env vars without verifying in BOTH GitHub AND Vercel'
- Added 'Blaming env var missing without checking' to FORBIDDEN ACTIONS
- Added 🔑 Environment Variable Verification Protocol with:
  - Checklist to verify GitHub Secrets + Vercel env vars
  - MISSING ENV VAR NOTIFICATION template for Eng. Sultan
  - Commands to scan codebase for env var usage
- Added 📋 Error Handling Standards with:
  - Error code format: [FIXZIT-MODULE-NNN]
  - Module codes: AUTH, DB, API, TENANT, PAY, SOUQ, AQAR, HR, FM, ENV, I18N, FILE
  - Required error response structure with code, message, details, path, timestamp, requestId
  - Env var error pattern example
  - Logging with error codes example

.vscode/settings.json updates:
- Added 4 new agent rules:
  - Verify env vars in BOTH GitHub Secrets AND Vercel before blaming
  - Report which platform(s) need missing env var
  - Always use error codes [FIXZIT-MODULE-NNN]
  - Never swallow errors - always log with context

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,11 @@
     "Update docs/PENDING_MASTER.md after every session",
     "Run SSOT Sync Protocol before closing any task",
     "Notify Eng. Sultan with Final Output box",
-    "Never claim fixed without evidence"
+    "Never claim fixed without evidence",
+    "Before blaming missing env var - verify in BOTH GitHub Secrets AND Vercel",
+    "If env var is truly missing - report which platform(s) need it",
+    "Always use error codes [FIXZIT-MODULE-NNN] for traceability",
+    "Never swallow errors - always log with context and error code"
   ],
 
   "eslint.enable": true,
