--- a/.github/workflows/ci-full-suite.yml
+++ b/.github/workflows/ci-full-suite.yml
@@ -38,6 +38,8 @@ jobs:
       
       - name: TypeCheck
         run: pnpm typecheck
+        env:
+          NODE_OPTIONS: '--max-old-space-size=4096'
 
   lint:
     name: ESLint
@@ -136,6 +138,8 @@ jobs:
           flags: client
           name: client-tests
 
+  # NOTE: Model tests are now included in the "server" project in vitest.config.ts
+  # This job runs a subset filter for model-specific tests
   test-models:
     name: Tests (Models)
     runs-on: ubuntu-latest
@@ -157,7 +161,7 @@ jobs:
         run: pnpm install --frozen-lockfile
       
       - name: Run model tests
-        run: pnpm vitest run --project=models --reporter=dot
+        run: pnpm vitest run --project=server tests/models tests/**/models --reporter=dot
         env:
           NODE_ENV: test
 
