--- a/.github/workflows/ci-fast-lane.yml
+++ b/.github/workflows/ci-fast-lane.yml
@@ -49,6 +49,8 @@ jobs:
       
       - name: Run TypeScript check
         run: pnpm typecheck
+        env:
+          NODE_OPTIONS: '--max-old-space-size=4096'
       
       - name: Run ESLint
         run: pnpm lint
